250603 PJK side project 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
   "search.exclude": {
     "docs/**": true
   },
-  "cSpell.words": ["dddddddsadasdasd"]
+  "cSpell.words": ["dddddddsadasdasd", "sideproject"]
 }
