--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "resume",
-  "lastestUpdatedAt": "2025-06-03",
+  "lastestUpdatedAt": "2025-06-24",
   "version": "1.0.0",
-  "description": "Wonjoon's resume. Made from yowu's masterpiece",
+  "description": "Jongkwon's resume.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
